cluster/apps/auth/realms/bloopysphere/keycloak/instance/routers/kc-iam-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: iam-keycloak
  namespace: auth
  annotations:
    hajimari.io/appName: IAM Settings
    hajimari.io/enable: true
    hajimari.io/icon: account-lock-outline
    hajimari.io/instance: bloop-quarky
    hajimari.io/url: https://iam.${XYZ_DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`iam.${XYZ_DOMAIN}`)
      services:
        - kind: Service
          name: kc-instance-service
          port: 8443
      middlewares:
        - name: networking-rate-limit@kubernetescrd
  tls:
    secretName: "tls.${XYZ_DOMAIN/./-}"
